syntax = "proto3";
package camion;
// Définition du message TV show
message camion {
string id = 1;
string title = 2;
string description = 3;
// Ajouter d'autres champs de données pour les séries TV au besoin
}
// Définition des messages de requête et de réponse pour les méthodes
message GetcamionRequest {
string tv_show_id = 1;
}
message GetcamionResponse {
camion tv_show = 1;
}
message SearchcamionsRequest {
string query = 1;
}
message SearchcamionsResponse {
repeated camion tv_shows = 1;
}

message AddcamionRequest {
    string title = 1;
    string description = 2;
}

message AddcamionResponse {
    camion tv_show = 1;
}
// Définition du service de séries TV
service camionService {
rpc Getcamion(GetcamionRequest) returns (GetcamionResponse);
rpc Searchcamions(SearchcamionsRequest) returns (SearchcamionsResponse);
rpc Addcamion(AddcamionRequest) returns (AddcamionResponse);

// Ajouter d'autres méthodes au besoin
}